# rcslib

./: .gitignore  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  acinclude.m4  add_header.sh  add_header_to_all.sh  bootstrap  cleanup.sh  configure  configure.ac  icc_linux_custom_libtool  license-NIST.txt  rcs_config.h.in  rcslib.pc.in  travisCI_script.sh
doc/: CMSinternal.html  CodeGen-Instructions.html  EXAMPLE_MSG.java  EXAMPLE_MSG_TYPE_map.csv  EXAMPLE_MSG_TYPE_map_v2.csv  Makefiles.html  Makefiles.ps  NML.html  NML_Ada.html  NML_XML.html  NMLcfg-June-2004.html  NMLcfg.html  NMLcpp.html  NMLjava.html  NMLtoc.html  README.DOS  bugs.html  c++_ex1.cc  c++_ex2.cc  c++_ex3.cc  c++_ex4.cc  c++_ex5.cc  c++_ex6.cc  cgtester.hh  cgtester_n_codegen_protos.hh  cms_types.hh  diag.jnlp  dirtable.html  dirtable.noimages.html  (+116 more)
skel/: .indent.pro  Makefile.am  Makefile.local  acinclude.m4  autoconf.sh  build  configure.ac
skel/config/: README
skel/etc/: Makefile.am  Makefile.local  skel.cfg  skel.ini  skel.nml
skel/lib/: Makefile.am
skel/src/: Makefile.am  Makefile.local  getopt.c  getopt.h  skel.cc  skel.hh  skelIntf.cc  skelIntf.hh  skelLog.cc  skelNmlSvr.cc  subIntf.cc  subIntf.hh  subMain.cc  subShell.cc  supIntf.cc  supIntf.hh  supMain.cc  supShell.cc
skel/win32/: run.bat  skel.sln  skel.vcproj
skel/win32/skelLog/: skelLog.vcproj
skel/win32/skelNmlSvr/: skelNmlSvr.vcproj
skel/win32/subMain/: subMain.vcproj
skel/win32/subShell/: subShell.vcproj
skel/win32/supMain/: supMain.vcproj
skel/win32/supShell/: supShell.vcproj
(+1907 files in other folders)
